--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,49 +4,66 @@
 
 header {
   display: flex;
+  background-image: url("./src/components/Header/assets/paper-tear.png");
+  background-repeat: no-repeat;
 }
 
-a {
-    color: black;
-    text-decoration: none;
+header a {
+  color: black;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 25px;
+  letter-spacing: -1px;
 }
 
-#menu {
+header #menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 60px;
 }
 
-#menu ul {
+header #menu ul {
   display: flex;
   list-style-type: none;
   gap: 40px;
   padding: 20px;
 }
 
-#title {
+header #title {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  min-height:70%;
+  min-height: 70%;
 }
 
-#arrow {
+header #arrow {
   display: flex;
   align-items: end;
   justify-content: center;
 }
 
-h1 {
-    text-align: center;
+header #title-mid {
+  z-index: 10;
 }
 
-#title-img {
-    max-height: 300px;
-    display: inline;
-} 
+h1 {
+  text-align: center;
+}
 
-h2 {
+.title-img {
+  max-height: 300px;
+  max-width: 80%;
+  display: inline;
+}
+
+.title-background {
+  position: relative;
+  top: 25px;
+  left: -20vw;
+  max-width: 100%;
+}
+
+header h2 {
   display: flex;
   flex-direction: column;
   color: white;
@@ -54,8 +71,8 @@ h2 {
   gap: 10px;
 }
 
-h2 span {
-    padding: 5px;
+header h2 span {
+  padding: 5px;
 }
 
 #thirst {
@@ -76,6 +93,17 @@ h2 span {
 }
 
 .highlighted {
-    font-weight: 700;
-    color: var(--pink);
+  font-weight: 700;
+  color: var(--pink);
+}
+
+@media screen and (max-width: 1310px) {
+  header #title {
+    grid-template-columns: 1fr 4fr 1fr;
+  }
+
+  .title-background {
+    top: 25px;
+    left: -17.5vw;
+  }
 }
