--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;} */
-
-  *{
-    margin:0;
-    font-family: 'Roboto', sans-serif 
-  }
+* {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
