--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -8,7 +8,7 @@
   position: relative;
 }
 
-img{
+.Banner img{
   position: absolute;
   overflow: hidden;
   left: -7.5%;
@@ -16,25 +16,25 @@ img{
   z-index: 0;
 }
 
-.Header{
+.Banner .Header{
   width: 30%
 }
 
-.Header h1{
+.Banner .Header h1{
   font-size: 3.5rem;
   color: black;
 }
 
-.Header span{
+.Banner .Header span{
   color: white;
 }
 
-.textBtn{
+.Banner .textBtn{
   width: 30%;
   text-align: left;
 }
 
-.textBtn p {
+.Banner .textBtn p {
   padding: 0;
   text-align: justify;
   font-size: 1.1rem;
@@ -45,11 +45,11 @@ img{
   color: black;
 }
 
-.textBtn span{
+.Banner .textBtn span{
   color: white;
 }
 
-.textBtn button{
+.Banner .textBtn button{
   padding-inline: 2.8rem;
   padding-block: 0.5rem;
   background: none;
@@ -58,5 +58,11 @@ img{
   font-size: 1rem;
   font-weight: bold;
   color: white;
-  
+  transition: 0.4s ease; 
+  cursor: pointer;
+}
+
+.Banner .textBtn button:hover{
+  transform: scale(0.9);
+  box-shadow: 0px 0px 10px white;
 }
