--- a/src/components/Newsletter/newsletter.css
+++ b/src/components/Newsletter/newsletter.css
@@ -33,7 +33,7 @@
     border: 1px solid white;
     border-radius: 20px;
     color: white;
-    padding: 10px;
+    padding: 10px 30px;
     margin: 5px;
     font-size: 17px;
 }
